feat(doctor): implement hybrid data architecture for dynamic doctor search     - Add DoctorRepositoryCustom interface and DoctorRepositoryImpl class using JPA Criteria API     - Implement multi-criteria dynamic filtering (query, specialization, location) with pagination and sorting     - Extend DoctorRepository with custom interface while retaining standard JPA CRUD methods     - Optimize DoctorService.getDoctorsBySpecialization to filter at database level     - Expose GET /api/doctors/search endpoint in DoctorController